etc/tests/error/parser/lexer-invalid-byte-stops.ny
use std.core

mut i = 0
while(i < 8)é

fn main(){ 0 }
main()
